# arduino_serial_monitor

./: .gitignore  LICENSE  README.md  flake.nix  install.sh  pyproject.toml  requirements.txt
arduino_serial_monitor/: __init__.py  __main__.py  display.py  serial_monitor.py
